Assignment1/services/manifests/alert-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert
  labels:
    app: alert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert
  template:
    metadata:
      labels:
        app: alert
    spec:
      containers:
      - name: alert
        image: ccuni/alert-service-2022w
        ports:
        - containerPort: 31500
