Assignment1/services/manifests/camera-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camera
  labels:
    app: camera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camera
  template:
    metadata:
      labels:
        app: camera
    spec:
      containers:
      - name: camera
        image: ccuni/camera-service-2022w
        ports:
        - containerPort: 31100
