Assignment1/services/manifests/face-recognition-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-recognition
  labels:
    app: face-recognition
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-recognition
  template:
    metadata:
      labels:
        app: face-recognition
    spec:
      containers:
      - name: face-recognition
        image: ccuni/face-recognition-service-2022w
        ports:
        - containerPort: 31300
