Assignment1/services/manifests/alert-service.yml
apiVersion: v1
kind: Service
metadata:
  name: alert
  labels:
    app: alert
spec:
  type: LoadBalancer
  selector:
    app: alert
  ports:
  - port: 80
    targetPort: 80
