Assignment1/services/manifests/camera-service.yml
apiVersion: v1
kind: Service
metadata:
  name: camera
  labels:
    app: camera
spec:
  type: LoadBalancer
  selector:
    app: camera
  ports:
  - port: 80
    targetPort: 80
