Assignment1/services/manifests/collector-service.yml
apiVersion: v1
kind: Service
metadata:
  name: collector
  labels:
    app: collector
spec:
  type: LoadBalancer
  selector:
    app: collector
  ports:
  - port: 8080
    targetPort: 8080
