Assignment1/services/manifests/face-recognition-service.yml
apiVersion: v1
kind: Service
metadata:
  name: face-recognition
  labels:
    app: face-recognition
spec:
  type: LoadBalancer
  selector:
    app: face-recognition
  ports:
  - port: 80
    targetPort: 80
