Assignment1/services/manifests/image-analysis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-analysis
  labels:
    app: image-analysis
spec:
  type: LoadBalancer
  selector:
    app: image-analysis
  ports:
  - port: 80
    targetPort: 80
