Assignment1/services/manifests/section-service.yml
apiVersion: v1
kind: Service
metadata:
  name: section
  labels:
    app: section
spec:
  type: LoadBalancer
  selector:
    app: section
  ports:
  - port: 80
    targetPort: 80
